src/OpenCvSharp.Native/include/open_cv_sharp/ml/ml.h

typedef struct jyppx_ocv_ml_train_data jyppx_ocv_ml_train_data;
typedef struct jyppx_ocv_ml_model jyppx_ocv_ml_model;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_create(
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_load(
    const char* filepath,
    const char* node_name,
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_create(
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_load(
    const char* filepath,
    const char* node_name,
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_create(
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_load(
    const char* filepath,
    const char* node_name,
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_create(
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_load(
    const char* filepath,
    const char* node_name,
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_double(
    jyppx_ocv_ml_model* model,
    int property_id,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_train_method(
    jyppx_ocv_ml_model* model,
    int method,
    double param1,
    double param2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_activation_function(
    jyppx_ocv_ml_model* model,
    int type,
    double param1,
    double param2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_get_layer_sizes(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_layer_sizes(
    jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* layer_sizes);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_get_term_criteria(
    const jyppx_ocv_ml_model* model,
    int* type,
    int* max_count,
    double* epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_term_criteria(
    jyppx_ocv_ml_model* model,
    int type,
    int max_count,
    double epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_get_weights(
    const jyppx_ocv_ml_model* model,
    int layer_index,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_ann_mlp_set_anneal_energy_seed(
    jyppx_ocv_ml_model* model,
    unsigned long long seed);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_get_int(
    const jyppx_ocv_ml_model* model,
    int property_id,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_set_int(
    jyppx_ocv_ml_model* model,
    int property_id,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_get_regression_accuracy(
    const jyppx_ocv_ml_model* model,
    float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_set_regression_accuracy(
    jyppx_ocv_ml_model* model,
    float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_get_priors(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_dtrees_set_priors(
    jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* priors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_get_int(
    const jyppx_ocv_ml_model* model,
    int property_id,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_set_int(
    jyppx_ocv_ml_model* model,
    int property_id,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_get_term_criteria(
    const jyppx_ocv_ml_model* model,
    int* type,
    int* max_count,
    double* epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_set_term_criteria(
    jyppx_ocv_ml_model* model,
    int type,
    int max_count,
    double epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_get_var_importance(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_get_votes(
    const jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* samples,
    jyppx_ocv_mat* results,
    int flags);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_rtrees_get_oob_error(
    const jyppx_ocv_ml_model* model,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_get_int(
    const jyppx_ocv_ml_model* model,
    int property_id,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_set_int(
    jyppx_ocv_ml_model* model,
    int property_id,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_get_weight_trim_rate(
    const jyppx_ocv_ml_model* model,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_boost_set_weight_trim_rate(
    jyppx_ocv_ml_model* model,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_int(
    const jyppx_ocv_ml_model* model,
    int property_id,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_set_int(
    jyppx_ocv_ml_model* model,
    int property_id,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_term_criteria(
    const jyppx_ocv_ml_model* model,
    int* type,
    int* max_count,
    double* epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_set_term_criteria(
    jyppx_ocv_ml_model* model,
    int type,
    int max_count,
    double epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_weights(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_means(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_covariances_count(
    const jyppx_ocv_ml_model* model,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_get_covariances_fill(
    const jyppx_ocv_ml_model* model,
    jyppx_ocv_mat* const* covariances,
    int covariance_capacity,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_predict2(
    const jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* sample,
    jyppx_ocv_mat* probabilities,
    double* log_likelihood,
    int* label);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_train_em(
    jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* samples,
    jyppx_ocv_mat* log_likelihoods,
    jyppx_ocv_mat* labels,
    jyppx_ocv_mat* probabilities,
    int* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_train_e(
    jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* samples,
    const jyppx_ocv_mat* initial_means,
    const jyppx_ocv_mat* const* initial_covariances,
    int initial_covariance_count,
    const jyppx_ocv_mat* initial_weights,
    jyppx_ocv_mat* log_likelihoods,
    jyppx_ocv_mat* labels,
    jyppx_ocv_mat* probabilities,
    int* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_em_train_m(
    jyppx_ocv_ml_model* model,
    const jyppx_ocv_mat* samples,
    const jyppx_ocv_mat* initial_probabilities,
    jyppx_ocv_mat* log_likelihoods,
    jyppx_ocv_mat* labels,
    jyppx_ocv_mat* probabilities,
    int* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_train_data_get_sample_count(
    const jyppx_ocv_ml_train_data* train_data,
    const jyppx_ocv_mat* variable_indices,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_train_data_get_sample_fill(
    const jyppx_ocv_ml_train_data* train_data,
    const jyppx_ocv_mat* variable_indices,
    int sample_index,
    float* values,
    int value_capacity,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_train_data_get_values_count(
    const jyppx_ocv_ml_train_data* train_data,
    const jyppx_ocv_mat* sample_indices,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_train_data_get_values_fill(
    const jyppx_ocv_ml_train_data* train_data,
    int variable_index,
    const jyppx_ocv_mat* sample_indices,
    float* values,
    int value_capacity,
    int* count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_logistic_regression_create(
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_logistic_regression_load(
    const char* filepath,
    const char* node_name,
    jyppx_ocv_ml_model** model);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ml_logistic_regression_get_learning_rate(
    const jyppx_ocv_ml_model* model,
    double* value);