src/OpenCvSharp/Internal/Interop/NativeMethods.ML.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_double")]
        internal static partial int MlAnnMlpSetDouble(IntPtr model, int propertyId, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_train_method")]
        internal static partial int MlAnnMlpSetTrainMethod(IntPtr model, int method, double param1, double param2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_activation_function")]
        internal static partial int MlAnnMlpSetActivationFunction(IntPtr model, int type, double param1, double param2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_get_layer_sizes")]
        internal static partial int MlAnnMlpGetLayerSizes(IntPtr model, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_layer_sizes")]
        internal static partial int MlAnnMlpSetLayerSizes(IntPtr model, IntPtr layerSizes);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_get_term_criteria")]
        internal static partial int MlAnnMlpGetTermCriteria(IntPtr model, out int type, out int maxCount, out double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_term_criteria")]
        internal static partial int MlAnnMlpSetTermCriteria(IntPtr model, int type, int maxCount, double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_get_weights")]
        internal static partial int MlAnnMlpGetWeights(IntPtr model, int layerIndex, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_ann_mlp_set_anneal_energy_seed")]
        internal static partial int MlAnnMlpSetAnnealEnergySeed(IntPtr model, ulong seed);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_create")]
        internal static partial int MlDTreesCreate(out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_load")]
        internal static partial int MlDTreesLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_get_int")]
        internal static partial int MlDTreesGetInt(IntPtr model, int propertyId, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_set_int")]
        internal static partial int MlDTreesSetInt(IntPtr model, int propertyId, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_get_regression_accuracy")]
        internal static partial int MlDTreesGetRegressionAccuracy(IntPtr model, out float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_set_regression_accuracy")]
        internal static partial int MlDTreesSetRegressionAccuracy(IntPtr model, float value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_get_priors")]
        internal static partial int MlDTreesGetPriors(IntPtr model, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_dtrees_set_priors")]
        internal static partial int MlDTreesSetPriors(IntPtr model, IntPtr priors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_create")]
        internal static partial int MlRTreesCreate(out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_load")]
        internal static partial int MlRTreesLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_get_int")]
        internal static partial int MlRTreesGetInt(IntPtr model, int propertyId, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_set_int")]
        internal static partial int MlRTreesSetInt(IntPtr model, int propertyId, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_get_term_criteria")]
        internal static partial int MlRTreesGetTermCriteria(IntPtr model, out int type, out int maxCount, out double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_set_term_criteria")]
        internal static partial int MlRTreesSetTermCriteria(IntPtr model, int type, int maxCount, double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_get_var_importance")]
        internal static partial int MlRTreesGetVarImportance(IntPtr model, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_get_votes")]
        internal static partial int MlRTreesGetVotes(IntPtr model, IntPtr samples, IntPtr results, int flags);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_rtrees_get_oob_error")]
        internal static partial int MlRTreesGetOobError(IntPtr model, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_create")]
        internal static partial int MlBoostCreate(out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_load")]
        internal static partial int MlBoostLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_get_int")]
        internal static partial int MlBoostGetInt(IntPtr model, int propertyId, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_set_int")]
        internal static partial int MlBoostSetInt(IntPtr model, int propertyId, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_get_weight_trim_rate")]
        internal static partial int MlBoostGetWeightTrimRate(IntPtr model, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_boost_set_weight_trim_rate")]
        internal static partial int MlBoostSetWeightTrimRate(IntPtr model, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_create")]
        internal static partial int MlEMCreate(out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_load")]
        internal static partial int MlEMLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_int")]
        internal static partial int MlEMGetInt(IntPtr model, int propertyId, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_set_int")]
        internal static partial int MlEMSetInt(IntPtr model, int propertyId, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_term_criteria")]
        internal static partial int MlEMGetTermCriteria(IntPtr model, out int type, out int maxCount, out double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_set_term_criteria")]
        internal static partial int MlEMSetTermCriteria(IntPtr model, int type, int maxCount, double epsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_weights")]
        internal static partial int MlEMGetWeights(IntPtr model, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_means")]
        internal static partial int MlEMGetMeans(IntPtr model, IntPtr dst);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_covariances_count")]
        internal static partial int MlEMGetCovariancesCount(IntPtr model, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_get_covariances_fill")]
        internal static partial int MlEMGetCovariancesFill(IntPtr model, IntPtr[] covariances, int covarianceCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_predict2")]
        internal static partial int MlEMPredict2(IntPtr model, IntPtr sample, IntPtr probabilities, out double logLikelihood, out int label);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_train_em")]
        internal static partial int MlEMTrainEM(IntPtr model, IntPtr samples, IntPtr logLikelihoods, IntPtr labels, IntPtr probabilities, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_train_e")]
        internal static partial int MlEMTrainE(IntPtr model, IntPtr samples, IntPtr initialMeans, IntPtr[] initialCovariances, int initialCovarianceCount, IntPtr initialWeights, IntPtr logLikelihoods, IntPtr labels, IntPtr probabilities, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_em_train_m")]
        internal static partial int MlEMTrainM(IntPtr model, IntPtr samples, IntPtr initialProbabilities, IntPtr logLikelihoods, IntPtr labels, IntPtr probabilities, out int result);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_train_data_get_sample_count")]
        internal static partial int MlTrainDataGetSampleCount(IntPtr trainData, IntPtr variableIndices, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_train_data_get_sample_fill")]
        internal static unsafe partial int MlTrainDataGetSampleFill(IntPtr trainData, IntPtr variableIndices, int sampleIndex, float* values, int valueCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_train_data_get_values_count")]
        internal static partial int MlTrainDataGetValuesCount(IntPtr trainData, IntPtr sampleIndices, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_train_data_get_values_fill")]
        internal static unsafe partial int MlTrainDataGetValuesFill(IntPtr trainData, int variableIndex, IntPtr sampleIndices, float* values, int valueCapacity, out int count);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_create")]
        internal static partial int MlLogisticRegressionCreate(out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_load")]
        internal static partial int MlLogisticRegressionLoad(byte[] filepath, byte[] nodeName, out IntPtr model);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ml_logistic_regression_get_learning_rate")]
        internal static partial int MlLogisticRegressionGetLearningRate(IntPtr model, out double value);
